fix(docs): 전 챕터 내용 검수 반영 — 사실·현행화·모순·다이어그램 오류 수정
- 워크플로 검수 2회: 1차 606건, 2차 207건 적용 (발견 1,019건 중 교차 검증에서 187건 반박·제외)
  - 현행화(2026-09 기준): Vite 8/Rolldown, Next.js 16 revalidateTag, React 19 forwardRef,
    Spring Boot 4 모듈 분리·Jackson 3, Node 20 EOL, Promtail→Alloy, DORA 지표 명칭 등
  - 사실·모순: CAP 정의, OAuth PKCE, preStop/SIGTERM 순서, HashMap treeify 조건 등
  - 다이어그램: SVG 텍스트·보존 ASCII·본문 사이의 불일치 수정
- 스크롤 이벤트 설명을 HTML 표준·MDN에 맞게 정정 (프레임당 최대 한 번, rAF 스로틀은 효과 없음)
- 추적 시각화 막대를 축척대로 다시 그리고, 조합 폭발 그림에 빠진 7번째 클래스를 추가,
  컴포넌트 설계 그림의 모호한 가운데 문구를 제거
- 루트 README 안내 문구를 실제 문서 구성에 맞게 수정, 폴더 README 파일명 링크 정리